--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -193,7 +193,7 @@ es:
   number:
     currency:
       format:
-        delimiter: ,
+        delimiter: ! ','
         format: ! '%n %u'
         precision: 2
         separator: ! '.'
