se le puso secure_save a los controladores

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -194,7 +194,7 @@ es:
     currency:
       format:
         delimiter: ! ','
-        format: ! '%n %u'
+        format: ! '%u %n'
         precision: 2
         separator: ! '.'
         significant: false
